<resources>

    <string name="hello_world">Hello world!</string>

    <string name="app_name">TrempIt</string>

    <string name="action_settings">Settings</string>

    <string name="insert_username">Insert Username</string>
    <string name="insert_country">Insert Country</string>
    <string name="insert_city">Insert City</string>
    <string name="insert_street">Insert Street</string>
    <string name="insert_house_number">Insert House Number</string>
    <string name="login_to_trempit">Login to TrempIt</string>
    <string name="signup_to_trempit">Signup to TrempIt</string>
    <string name="invalid_username">Invalid username</string>

    <string name="insert_number_of_available_seats">Insert number of available seats:</string>
    <string name="choose_arrival_time">Choose arrival time:</string>
    <string name="signup_as_driver">Signup as driver</string>

    <string name="number_of_available_seats">Number of available seats:</string>
    <string name="arrival_time">Arrival time:</string>
    <string name="title_activity_trempit">TrempitActivity</string>
    
    
    <string name="facebook_app_id">906742579381804</string>
    <string name="title_activity_maps">Map</string>
</resources>
