<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/availableSeats"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/availableSeatsTextfield"
        android:text="@string/insert_number_of_available_seats" />

    <EditText
        android:id="@id/availableSeatsTextfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/availableSeats"
        android:hint="4"/>

    <TextView
        android:id="@+id/chooseArrivalTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/availableSeatsTextfield"
        android:text="@string/choose_arrival_time"/>

    <Spinner
        android:id="@+id/dates"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/chooseArrivalTime"/>

    <Spinner
        android:id="@+id/times"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/chooseArrivalTime"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/dates"
        android:layout_alignBaseline="@+id/countryTextfield"
        android:text="Country      "/>

    <EditText
        android:id="@id/countryTextfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/times"
        android:layout_toRightOf="@id/country"
        android:hint="@string/insert_country"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/countryTextfield"
        android:layout_alignBaseline="@+id/cityTextfield"
        android:text="City             "/>

    <EditText
        android:id="@id/cityTextfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countryTextfield"
        android:layout_toRightOf="@id/city"
        android:hint="@string/insert_city"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/cityTextfield"
        android:layout_alignBaseline="@+id/streetTextfield"
        android:text="Street         "/>

    <EditText
        android:id="@id/streetTextfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cityTextfield"
        android:layout_toRightOf="@id/street"
        android:hint="@string/insert_street"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/streetTextfield"
        android:layout_alignBaseline="@+id/numberTextfield"
        android:text="Number     "/>

    <EditText
        android:id="@id/numberTextfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/streetTextfield"
        android:layout_toRightOf="@id/number"
        android:hint="@string/insert_house_number" />


</RelativeLayout>